--- a/src/main/resources/templates/venuedetails.html
+++ b/src/main/resources/templates/venuedetails.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
-    <title>about</title>
+    <title>About page</title>
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
 </head>
 <body>
-<h1>About</h1>
-<p>Welcome to the about page.</p>
+<h1 th:text="${venuename}">venuename</h1>
+<p>Welcome to the Venue Page.</p>
 </body>
 </html>
