--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
 </head>
 <body>
-<h1>About</h1>
+<div th:replace="fragments/header :: header">Home</div>
+
 <p>Welcome to the about page.</p>
 </body>
 </html>
