--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
 </head>
 <body>
-<h1>Homepage</h1>
+<div th:replace="fragments/header :: header">Home</div>
 <p>Welcome to the party!</p>
 <p th:text="${mySpecialNumber}">mySpecialNumber</p>
-<a th:href="@{/about}">about</a>
 </body>
 </html>
