--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,6 +2,26 @@ body{
     background-color: lightseagreen;
 }
 
+header{
+
+}
+
+navbuttons{
+    background-color: black;
+    padding-inline: 20px;
+}
+
+buttonLook menuButton{
+    width:200px;
+    height:50px;
+    margin-right:40px;
+    margin-left:10px;
+    display:inline-block;
+    font-size:14px;
+    text-decoration: none;
+    text-align: center;
+}
+
 h1{
     font-family: Verdana;
     color: blanchedalmond;
