--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -8,6 +8,10 @@
 <body>
 <div th:replace="fragments/header :: header">Home</div>
 
-<p>Welcome to the about page.</p>
+    <div class="container">
+        <h1>About</h1>
+        <p>Welcome to the about page.</p>
+    </div>
+
 </body>
 </html>
