--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en" xmlns="http://www.w3.org/1999/html">
+<head>
     <meta charset="UTF-8">
-    <title>About page</title>
+    <title>Venue list</title>
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
 </head>
 <body>
-<h1>Venue list</h1>
-<ul>
-    <li><a th:href="@{/venuedetails/Zillion}" href="">Zillion</a></li>
-    <li><a th:href="@{/venuedetails/Carré}" href="">Carré</a></li>
-    <li><a th:href="@{/venuedetails/Cherrymoon}" href="">Cherrymoon</a></li>
-</ul>
+<div th:replace="fragments/header :: header">header</div>
+
+<div class="container">
+    <h1>Venue list</h1>
+    <ul class="buttonlist">
+        <li th:each="venuename, iStat:${venuenames}">
+            <a th:href="@{|/venuedetailsbyindex/${iStat.index}|}" th:text="|${venuename}', met index: ' ${iStat.index} ' met in totaal ' ${iStat.size} ' elementen.'|" href="">venue name</a>
+        </li>
+    </ul>
+</div>
 </body>
 </html>
