--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <div class="header" th:fragment="header">
-      <h1>Let's Party!</h1>
         <div class="nav">
-          <a class="buttonLook menuButton" th:href="@{/home}">home</a>
-          <a class="buttonLook menuButton" th:href="@{/about}">about</a>
-          <a class="buttonLook menuButton" th:href="@{/venuelist}">venuelist</a>
-          <a class="buttonLook menuButton" th:href="@{/pay}">pay</a>
+          <h1>Let's Party!</h1>
+          <a class="buttonLook menuButton" th:href="@{/home}">Home</a>
+          <a class="buttonLook menuButton" th:href="@{/about}">About</a>
+          <a class="buttonLook menuButton" th:href="@{/venuelist}">Venuelist</a>
+          <a class="buttonLook menuButton" th:href="@{/pay}">Pay</a>
         </div>
     </div>
 </body>
