--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -33,6 +33,10 @@ p{
     text-decoration: none;
 }
 
+.buttonLook:hover{
+    background-color: gray;
+}
+
 .container{
     width:80%;
     margin-left:auto;
@@ -40,69 +44,34 @@ p{
     float: left;
 }
 
-.buttonLook:hover{
-    background-color: gray;
-}
-
 .menuButton{
     float: left;
     margin-left: 10px;
 }
 
-.nav{
-    position: relative;
+.header {
     background-image: url("../img/partybanner.jpg");
-}
-
-.header{
+    background-position: center center;
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    height: 200px;
+    width:100%;
 }
 
-.buttonlist{
-    list-style: none;
+.nav{
+    overflow:hidden;
 }
 
-.buttonlist li a{
-    background-color: #999999;
-    color: white;
-    display: block;
-    width: 800px;
-    height: 50px;
-    line-height: 50px;
-    font-size: 18px;
-    text-align: center;
-    text-decoration: none;
-    margin-bottom: 15px;
-}
-
-.nextprev{
-    margin-top: 150px;
-    background-color: blanchedalmond;
-    display: block;
-    width: 20px;
-    line-height: 20px;
-    font-size: 20px;
-    font-weight: bold;
-    color: black;
-    text-decoration: none;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.nextprev:hover{
-    background-color: gray;
-    width: 20px;
-    font-size: 25px;
-    line-height: 25px;
-    margin-top: 148px;
+.buttonlist li a:hover{
+    background-color: darkcyan;
 }
 
 .border{
     width: 10%;
     float: left;
 }
-.buttonlist li a:hover{
-    background-color: darkcyan;
+
+.container{
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-top: 2%;
 }
