--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,5 +13,6 @@
         <p>Welcome to the party!</p>
         <p th:text="${mySpecialNumber}">mySpecialNumber</p>
 </div>
+<div class = "border"></div>
 </body>
 </html>
