--- a/src/main/resources/templates/venuedetailsbyindex.html
+++ b/src/main/resources/templates/venuedetailsbyindex.html
@@ -14,7 +14,12 @@
 <div class="container">
   <h1 th:text="${venueTitle}">venueTitle</h1>
   <p>Welcome to the Venue Index Page.</p>
+  <div th:if="${venue}">
+    <h1 th:text="${venue.venueName}">venueTitle</h1>
+    <a th:href="${venue.linkMoreInfo}" href="#">More info</a>
+  </div>
 </div>
+    <p th:unless="${venue}">No valid venue is chosen</p>
 <div class="border">
   <a th:href="@{|/venuedetailsbyindex/${nextIndex}|}" href="#" class="nextprev">&gt;</a>
 </div>
