--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="header" th:fragment="header">
+        <div class="banner"></div>
         <div class="nav">
           <h1>Let's Party!</h1>
           <a class="buttonLook menuButton" th:href="@{/home}">Home</a>
