--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <div class="header" th:fragment="header">
-        <div class="banner"></div>
+        <div class="banner">
+            <h1>Let's Party!</h1>
+        </div>
         <div class="nav">
-          <h1>Let's Party!</h1>
+
           <a class="buttonLook menuButton" th:href="@{/home}">Home</a>
           <a class="buttonLook menuButton" th:href="@{/about}">About</a>
           <a class="buttonLook menuButton" th:href="@{/venuelist}">Venuelist</a>
