--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -15,6 +15,7 @@
 
         <li th:each="venue, iStat:${venues}">
             <a th:href="@{|/venuedetailsbyindex/${iStat.index}|}" th:text="|${venue.getVenueName()}|" href="">venue name</a>
+            <a th:href="@{|/venuedetailsbyid/${iStat.index +1}|}" th:text="|${venue.getVenueName()}|" href="">venue name</a>
         </li>
     </ul>
 </div>
