--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,6 +16,7 @@
     <a class="buttonLook menuButton" th:href="@{/about}">About</a>
     <a class="buttonLook menuButton" th:href="@{/venuelist}">Venuelist</a>
     <a class="buttonLook menuButton" th:href="@{/pay}">Pay</a>
+    <a class="buttonLook menuButton" th:href="@{/artistlist}">Artistlist</a>
   </div>
 </div>
 </body>
