--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -10,39 +10,14 @@
 
 <div class="border"></div>
 <div class="container">
+  <div>Filter</div>
   <h2>Venue list</h2>
-    <p>Parking:</p>
-    <ul class="filter">
-      <li><a th:classappend="${parking}==1 ? activefilter : nofilter" href="/venuelist/parking/1">Yes</a></li>
-      <li><a th:classappend="${parking}==0 ? activefilter : nofilter" href="/venuelist/parking/0">No</a></li>
-      <li><a th:classappend="${parking}==2 ? activefilter : nofilter" href="/venuelist/parking/2">All</a></li>
-  </ul>
   <ul class="buttonlist">
     <li th:each="venue, iStat:${venues}">
     <a th:href="@{|/venuedetailsbyid/*{iStat.index +1}|}" th:text="|${venue.getVenueName()}|" href="">venue name</a>
     </li>
   </ul>
-  <p>Eten beschikbaar:</p>
-  <ul class="filter">
-    <li><a th:classappend="${foodAvailable}==1 ? activefilter : nofilter" href="/venuelist/foodAvailable/1">Yes</a></li>
-    <li><a th:classappend="${foodAvailable}==0 ? activefilter : nofilter" href="/venuelist/foodAvailable/0">No</a></li>
-    <li><a th:classappend="${foodAvailable}==2 ? activefilter : nofilter" href="/venuelist/foodAvailable/2">All</a></li>
-  </ul>
-  <ul class="buttonlist">
-    <li th:each="venue, iStat:${venues}">
-    <a th:href="@{|/venuedetailsbyid/*{iStat.index +1}|}" th:text="|${venue.getVenueName()}|" href="">venue name</a>
-  </ul>
-</div>
-  <p>Kinderen welkom:</p>
-  <ul class="filter">
-    <li><a th:classappend="${kidsFriendly}==1 ? activefilter : nofilter" href="/venuelist/kidsFriendly/1">Yes</a></li>
-    <li><a th:classappend="${kidsFriendly}==0 ? activefilter : nofilter" href="/venuelist/kidsFriendly/0">No</a></li>
-    <li><a th:classappend="${kidsFriendly}==2 ? activefilter : nofilter" href="/venuelist/kidsFriendly/2">All</a></li>
-  </ul>
-  <ul class="buttonlist">
-    <li th:each="venue, iStat:${venues}">
-    <a th:href="@{|/venuedetailsbyid/*{iStat.index +1}|}" th:text="|${venue.getVenueName()}|" href="">venue name</a>
-</ul>
+
   <div th:if="${test}" th:text="${test}"></div>
 <div class="border"></div>
 </body>
