--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -13,6 +13,27 @@
 <div class="container">
 
   <h2>Venue list</h2>
+
+  <div th:if="${showFilters}" class="filters">
+    <a class="buttonLook filterButton" th:href="@{|/venuelist}">Filter</a>
+
+    <form>
+      <h3>Capacity</h3>
+      <div class="oneFilter">
+        <label for="minCapacity" class="filtername">min</label>
+        <input type="number" id="minCapacity" name="minCapacity" value="0" step="50"> persons
+      </div>
+      <div>
+        <label for="maxCapacity" class="filtername">max</label>
+        <input type="number" id="maxCapacity" name="maxCapacity" value="0" step="50"> persons
+      </div>
+      <div class="oneFilter">
+        <input type ="submit" value="search" class="buttonLook filterButton">
+      </div>
+    </form>
+  </div>
+  <p th:text="|${total} venues|"></p>
+
   <ul class="buttonlist">
     <li th:each="venue, iStat:${venues}">
     <a th:href="@{|/venuedetailsbyid/*{iStat.index +1}|}" th:text="|${venue.getVenueName()}|" href="">venue name</a>
